--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<title>Flappy Bird: Fullscreen, Ad-Free</title>
-    <meta name="description" content="FlappyBirdGame: Explore freely with ad-free, fullscreen gameplay. Uncover treasures, conquer challenges, and have endless fun for free. Play now!">
+    <meta name="description" content="Flappy Bird Unblocked: Explore freely with ad-free, fullscreen gameplay. Uncover treasures, conquer challenges, and have endless fun for free. Play now!">
     <link rel="icon" href="/images/favicon.png" sizes="32x32">
 
 
@@ -100,6 +100,105 @@
 <div class="container">
 
 
+
+<div class="row">
+      <div class="col-md-10">
+            <div class="game-container">
+              <div class="game-content" data-id="169">
+                <div id="allow_mobile_version"></div>     
+               <!-- 
+                <div id="mobile-play" style="display: none;">
+                  <div class="mobile-thumb-play">
+                    <img src="#">
+                  </div>
+                  <div id="mobile-play-btn">
+                    <i class="bi bi-play-circle-fill"></i>
+                  </div>
+                </div> -->
+
+
+
+                <div class="game-iframe-container" id="game-player">
+                  <div id="mobile-back-button" draggable="true">
+                    <i class="bi bi-x-circle-fill"></i>
+                  </div>
+                  <iframe class="game-iframe" id="game-area" src="https://topvazstore.github.io/g8/flappy-bird-origin/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
+                </div>
+              </div>
+
+
+              <div class="game-info">
+                <div class="header-left">
+                  <h1 class="single-title">Flappy Bird</h1>
+
+
+                </div>
+                <div class="header-right">
+
+
+                  <div class="b-action2">
+              
+                    <a href="#" onclick="open_fullscreen()" class="btn btn-capsule"><i class="bi bi-arrows-fullscreen b-icon"></i>Fullscreen</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+      </div><!-- end col-9 -->
+      
+
+      <div class="col-md-2 ">
+
+        <div align="center">
+          <!-- <img src="https://storage.googleapis.com/website-production/uploads/2023/01/liveplan-banner-ad-example.png" width="300px" height="600px" alt="banner"> -->
+          <br>
+
+         <div class="col-lg-12 col-md-4 col-6 list-grid">
+               <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/geometry-dash.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/geometry-dash.png" class="small-thumb img-rounded"></div>
+                </div>
+              </a>
+            </div>  
+            <br>
+
+            <div class="col-lg-12 col-md-4 col-6 list-grid">
+               <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/slope.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/slope.png" class="small-thumb img-rounded"></div>
+                </div>
+              </a>
+            </div>  
+            <br>
+
+            <div title="Flappy Bird remake" class="col-lg-12 col-md-4 col-6 list-grid">
+              <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/flappy-bird.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/flappy-bird.png" class="small-thumb img-rounded"></div>
+                </div>
+              </a>
+            </div>  
+
+
+
+        </div>
+      </div>
+
+
+
+  </div> <!-- end play section -->
+
+
+  <!-- ads -->
+  <div class="banner-ad-wrapper">
+    <div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
+
+
+
+
+    </div>
+  </div>  
+  <!-- end ads -->
 
 
 
