--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <br>
 
          <div class="col-lg-12 col-md-4 col-6 list-grid">
-               <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/geometry-dash.html">
+               <a href="https://flappybirdgame.github.io/go/geometry-dash.html">
                 <div class="list-game">
                   <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/geometry-dash.png" class="small-thumb img-rounded"></div>
                 </div>
@@ -163,7 +163,7 @@
             <br>
 
             <div class="col-lg-12 col-md-4 col-6 list-grid">
-               <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/slope.html">
+               <a  href="https://flappybirdgame.github.io/go/slope.html">
                 <div class="list-game">
                   <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/slope.png" class="small-thumb img-rounded"></div>
                 </div>
@@ -172,7 +172,7 @@
             <br>
 
             <div title="Flappy Bird remake" class="col-lg-12 col-md-4 col-6 list-grid">
-              <a rel="nofollow" target="_blank" href="https://flappybirdgame.github.io/go/flappy-bird.html">
+              <a  href="https://flappybirdgame.github.io/go/flappy-bird.html">
                 <div class="list-game">
                   <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/flappy-bird.png" class="small-thumb img-rounded"></div>
                 </div>
