--- a/index.html
+++ b/index.html
@@ -865,10 +865,10 @@
 
 
 <div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/go/smash-karts.html">
+  <a href="/go/parking-fury.html">
   <div class="game-item">
     <div class="list-game">
-      <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/smash-karts.png" data-src="https://topvazstore.github.io/img/smash-karts.png" class="lazyload" alt="Smash Karts"></div>
+      <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/parking-fury.png" data-src="https://topvazstore.github.io/img/parking-fury.png" class="lazyload" alt="parking fury"></div>
     </div>
   </div>
   </a>
