--- a/index.html
+++ b/index.html
@@ -151,33 +151,17 @@
 
         <div align="center">
           <!-- <img src="https://storage.googleapis.com/website-production/uploads/2023/01/liveplan-banner-ad-example.png" width="300px" height="600px" alt="banner"> -->
-          <br>
 
-         <div class="col-lg-12 col-md-4 col-6 list-grid">
-               <a href="https://flappybirdgame.github.io/go/geometry-dash.html">
-                <div class="list-game">
-                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/geometry-dash.png" class="small-thumb img-rounded"></div>
-                </div>
-              </a>
-            </div>  
-            <br>
-
-            <div class="col-lg-12 col-md-4 col-6 list-grid">
-               <a  href="https://flappybirdgame.github.io/go/slope.html">
-                <div class="list-game">
-                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/slope.png" class="small-thumb img-rounded"></div>
-                </div>
-              </a>
-            </div>  
-            <br>
-
-            <div title="Flappy Bird remake" class="col-lg-12 col-md-4 col-6 list-grid">
-              <a  href="https://flappybirdgame.github.io/go/flappy-bird.html">
-                <div class="list-game">
-                  <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/flappy-bird.png" class="small-thumb img-rounded"></div>
-                </div>
-              </a>
-            </div>  
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '3501c6b8ab932df626ac165eaf2c5838',
+            'format' : 'iframe',
+            'height' : 300,
+            'width' : 160,
+            'params' : {}
+          };
+          document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/3501c6b8ab932df626ac165eaf2c5838/invoke.js"></scr' + 'ipt>');
+        </script>
 
 
 
@@ -193,7 +177,16 @@
   <div class="banner-ad-wrapper">
     <div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
 
-
+    <script type="text/javascript">
+      atOptions = {
+        'key' : '6fd7ed539f46c456b57d9b20938c4938',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
+      };
+      document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/6fd7ed539f46c456b57d9b20938c4938/invoke.js"></scr' + 'ipt>');
+    </script>
 
 
     </div>
