--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   gtag('config', 'G-QBXVVWPRBF');
 </script>
 
+<!-- ads -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2761564299182892"
+     crossorigin="anonymous"></script>
 
 
 
